--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
 
+  <!-- Parse -->
+  <script src="//www.parsecdn.com/js/parse-1.6.0.min.js"></script>
+
 
 
   <script src="app.js"></script>
